argocd-apps/n8n/istio.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: n8n
  labels:
    istio-injection: disabled
